updated readability on code and corrected location of displayed logs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,4 +131,5 @@ p {
     background-color: var(--containerC);
     border: 2px solid white;
     border-radius: 20px;
+    margin: 25px;
 }
